syntax = "proto3";
package account_api;

option java_multiple_files = true;
option java_package = "com.example.account.api.spec.model";

message AAccountDto {
    string tenant_id = 1;
    string login_name = 2;
    string display_name = 3;
    string email = 4;
    bool active = 5;
}

// Generic error response
message ExceptionResponse {
    ExceptionCode code = 1;
    string message = 2;
    string details = 3;
    string timestamp = 4;

    enum ExceptionCode {
        UNKNOWN_CODE = 0;
        BAD_REQUEST = 1;
        NO_DATA = 2;
    }
}